<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc" />
    <TextView
        android:id="@+id/status"
        android:paddingTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/status" />
    <TextView
        android:id="@+id/last"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/last" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable" />

        <Button
            android:id="@+id/disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable" />

    </LinearLayout>

</LinearLayout>